# SPDX-FileCopyrightText: 2024 Nils Jochem
# SPDX-License-Identifier: MPL-2.0

[package]
name = "audacity"
version = "0.1.5"
edition = "2021"
authors = ["Nils Jochem"]
license = "MPL-2.0"
repository = "https://github.com/NilsJochem/rust-common"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { git = "ssh://git@github.com/NilsJochem/rust-common" }
thiserror = "1.0"
log = "0.4"
confy = "0.5"
derive_more = "0.99"
itertools = "0.12"
momo = "0.2"

tokio = { version = "1.29", features = ["full"] }
tokio-test = "0.4"

serde = "1.0"
serde_json = "1.0"
serde_tuple = "0.5"
serde_with = "3.6"
toml = "0.8"
command-derive = { version = "0.1.0", path = "command-derive" }

[features]
default = ["aud-v3_4_x"]
aud-v3_3_x = []
aud-v3_4_x = []

[lints]
# base
clippy.nursery = { level = "warn", priority = -1 }
clippy.pedantic = { level = "warn", priority = -1 }

clippy.empty_structs_with_brackets = "warn"
clippy.format_push_string = "warn"
clippy.if_then_some_else_none = "warn"
clippy.missing_assert_message = "warn"
clippy.multiple_inherent_impl = "warn"
clippy.non_ascii_literal = "warn"
clippy.self_named_module_files = "warn"
clippy.semicolon_inside_block = "warn"
clippy.separated_literal_suffix = "warn"
clippy.str_to_string = "warn"
clippy.string_to_string = "warn"
rust.unsafe_op_in_unsafe_fn = "warn"
# rust.missing_docs = "warn"

clippy.cast_possible_truncation = "allow"
clippy.cast_precision_loss = "allow"
clippy.cast_lossless = "allow"
clippy.cast_sign_loss = "allow"
clippy.return_self_not_must_use = "allow"
clippy.single_match_else = "allow"
clippy.option_if_let_else = "allow"
clippy.must_use_candidate = "allow"
clippy.impl_trait_in_params = "allow"

# custom for this crate
